<resources>
    <string name="app_name">StudentClient</string>
    <string name="student_btn_text">Students</string>
    <string name="course_btn_text">Courses</string>
    <string name="settings_btn_text">Settings</string>
    <string name="student_selector_text">Students in:</string>
    <string name="student_search_text">Search:</string>
    <string name="course_selector_text">Courses in:</string>
    <string name="course_info_header">Course information:</string>
    <string name="course_member_header">Students in course:</string>
    <string name="student_info_header">Student:</string>
    <string name="student_member_header">Courses:</string>
    <string name="spinner_all_text">all</string>
    <string name="LWR_course">Course Information:</string>
    <string name="LWR_course_subitem">Courses:</string>
    <string name="LWR_student">Student Information:</string>
    <string name="LWR_student_subitem">Students:</string>
    <string name="LWR_phone_numbers">Phone numbers:</string>
    <string name="LWR_phone_numbers_subitem">Phone numbers:</string>
    <string name="LWR_header_row2">Entries...</string>
    <string name="precache_btn_text">Run precache</string>
    <string name="clearcache_btn_text">Clear cache</string>
    <string name="cache_info_text">Cache size:</string>
    <string name="dbColumn_name">name</string>
    <string name="dbColumn_surname">surname</string>
    <string name="dbColumn_id">id</string>
    <string name="dbColumn_postAddress">post address</string>
    <string name="dbColumn_streetAddress">street address</string>
    <string name="dbColumn_phonenumbers">phonenumbers</string>
    <string name="dbColumn_mobile">mobile</string>
    <string name="dbColumn_home">home</string>
    <string name="dbColumn_age">age</string>
    <string name="dbColumn_fax">fax</string>
    <string name="dbColumn_work">work</string>
    <string name="dbColumn_status">status</string>
    <string name="dbColumn_complete">complete</string>
    <string name="dbColumn_ongoing">ongoing</string>
    <string name="dbColumn_aborted">aborted</string>
    <string name="dbColumn_grade">grade</string>
    <string name="dbColumn_description">description</string>
    <string name="dbColumn_startDate">start date</string>
    <string name="dbColumn_endDate">end date</string>
    <string name="dbColumn_points">points</string>
    <string name="cache_size_deco">GET responses in cache.</string>
    <string name="switch_format_header_text">Switch communication format:</string>
    <string name="switch_format_btn_text">Current:</string>
</resources>
