<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:text="@string/student_btn_text"
        android:id="@+id/students_btn" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:text="@string/course_btn_text"
        android:id="@+id/courses_btn" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="15"
        android:text="@string/settings_btn_text"
        android:id="@+id/settings_btn" />
</LinearLayout>


